<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".activities.DetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:text="@string/description"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="27dp"/>

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/rating"
        android:textColor="@color/blue"
        android:textSize="23dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/worker"
        android:id="@+id/image"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="100dp"/>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:orientation="vertical"
        android:layout_marginLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/features"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="@string/trust"
            android:textColor="@color/dark_grey"
            android:layout_margin="5dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="@string/cancel"
            android:textColor="@color/dark_grey"
            android:layout_margin="5dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="@string/pay"
            android:textColor="@color/dark_grey"
            android:layout_margin="5dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:text="@string/flexible"
            android:textColor="@color/dark_grey"
            android:layout_margin="5dp"
            android:textSize="20dp"/>

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:id="@+id/slot_btn"
        android:textSize="16dp"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/blue"
        android:text="@string/slot"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="313dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:text="@string/time_slot"
        android:textColor="@color/dark_grey"
        android:layout_marginLeft="250dp"
        android:id="@+id/date_slot"
        android:layout_marginTop="373dp"
        android:textSize="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_alignTop="@+id/linear_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price"
            android:text="@string/price"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/blue"
            android:layout_margin="30dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:id="@+id/add_to_cart_btn"
            android:textSize="20dp"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/black"
            android:textStyle="bold"
            android:text="@string/add_cart"
            android:layout_marginLeft="60dp"/>

    </LinearLayout>

</RelativeLayout>