<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/main_image"
        android:layout_marginTop="45dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_intro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/name_register"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="130dp"
        android:layout_gravity="center"
        android:background="@drawable/edittext_bg"
        android:fontFamily="sans-serif-light"
        android:hint="@string/name"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="250dp"
        android:layout_marginTop="20dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/edittext_bg"
        android:fontFamily="sans-serif-light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="250dp"
        android:layout_marginTop="20dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/edittext_bg"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="25dp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:id="@+id/register_btn"
        android:textSize="20dp"
        app:cornerRadius="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/register_btn"/>

</LinearLayout>