<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:orientation="vertical"
    android:layout_margin="7dp"
    android:background="@drawable/category_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:text="@string/description"
            android:textColor="@color/white"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_marginLeft="7dp"
            android:textSize="27dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="7dp"
        android:textStyle="bold"
        android:id="@+id/date_slot"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:text="@string/time_slot"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/price"
                android:text="@string/price"
                android:textColor="@color/white"
                android:layout_marginLeft="7dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:text="@string/rating"
                android:layout_marginLeft="225dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="22dp"/>

        </LinearLayout>


</LinearLayout>