<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical"
    tools:context=".activities.ProfileActivity">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/back_btn"
        android:layout_margin="15dp"
        android:id="@+id/back_btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/user_name"
        android:textSize="28dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/user_email"
        android:textSize="28dp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="380dp"
        android:layout_gravity="center"
        android:id="@+id/sign_out_btn"
        android:textSize="20dp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/sign_out"/>

</LinearLayout>