<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    android:background="@drawable/deals_bg">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/worker"
        android:layout_marginTop="7dp"
        android:id="@+id/image"
        android:layout_marginLeft="7dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:textStyle="bold"
            android:text="@string/description"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="5dp"
            android:textSize="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/price"
                android:text="@string/price"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:text="@string/rating"
                android:layout_marginLeft="93dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="22dp"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>