<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/app_bg"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_page"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            app:tint="#000000"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/user" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/main_image" />

        <ImageView
            android:id="@+id/cart_page"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:tint="#000000"
            android:layout_alignParentRight="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/cart" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/view_all"
            android:backgroundTint="@color/black"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_marginTop="6dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:id="@+id/view_all_btn"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="60dp"
        tools:listitem="@layout/category_home_page_each_item"
        android:orientation="horizontal"
        android:id="@+id/category_recycler"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:src="@drawable/worker"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_deals"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/best_deals_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="3dp"
        android:layout_marginLeft="3dp"
        android:orientation="vertical"
        tools:listitem="@layout/best_deals_layout_recyclerview" />

</LinearLayout>